syntax = "proto3";

option csharp_namespace = "Psychologicaly.grpc.Protos";

package appointmentReport;

service AppointmentService {
  rpc GetAll (Empty) returns (AppointmentReportList);

  rpc GetById (AppointmentReportIdRequest) returns (AppointmentReport);

  rpc DeleteById (AppointmentReportIdRequest) returns (ActionResult);

  rpc Add (AppointmentReport) returns (ActionResult);

  rpc Edit (AppointmentReport) returns (ActionResult);
}

// Request để truyền ID khảo sát
message AppointmentReportIdRequest {
  int32 id = 1;
}

message ActionResult {
  int32 Status = 1;
  string Message = 2;
  AppointmentReportList Data = 3;
}	

message AppointmentReport {
  int32 id = 1;                
  int32 appointmentId = 5;        
  string description = 3;      
  int32 Star = 2;                     
  string createAt = 12;         
  string updateAt = 13;         
}

message AppointmentReportList {
  repeated AppointmentReport appointmentReport = 1; 
}

message Empty {}